--- a/temp_2.html
+++ b/temp_2.html
@@ -11,7 +11,7 @@
   }
   
   .bg {
-    background-image: url('your-background-image-url.jpg');
+    background-image: url('new_background.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
