--- a/temp_2.html
+++ b/temp_2.html
@@ -3,122 +3,93 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agastya Hukoo's Portfolio</title>
+<title>Agastya Hukoo</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 <style>
   body, html {
     height: 100%;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #121212; /* Dark theme background */
+    color: #e0e0e0; /* Light text for readability */
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
-  .bg {
-    background-image: url('new_background.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-  }
-
   .centered-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.7); /* Dark translucent background */
     backdrop-filter: blur(5px);
     padding: 20px;
     border-radius: 10px;
-    width: auto; /* Adjusted to auto for content fit */
-    max-width: 80%; /* Ensure box doesn't get too wide on large screens */
-    box-sizing: border-box; /* Ensures padding is included in width */
-    overflow: hidden; /* Keeps content within the box */
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    width: auto;
+    max-width: 90%; /* Adjust for better responsiveness */
+    box-sizing: border-box;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    margin: 50px; /* Ensures some space around the box if the content is too tall */
   }
 
   .centered-box img, .centered-box a {
-    display: block;
     margin: auto;
   }
 
-  .centered-box .badges, .centered-box .skills, .centered-box .featured-projects, .centered-box .professional-experience, .centered-box .educational-journey {
-    text-align: center;
-    margin-top: 20px;
+  .centered-box .badges a {
+    display: inline-block; /* Badges side by side */
+    margin: 0 5px; /* Spacing between badges */
   }
 
-  .centered-box table {
-    margin: 20px auto;
+  .centered-box h1, .centered-box h2, .centered-box h3, .centered-box h4 {
+    color: #ffffff; /* Light text for headers */
+  }
+
+  .centered-box p, .centered-box li {
+    color: #e0e0e0; /* Light text for readability */
   }
 </style>
 </head>
 <body>
 
-<div class="bg">
-  <div class="centered-box">
-    <!-- README Content Starts Here -->
-    <div align="center">
-      <img src="https://avatars.githubusercontent.com/u/136306593?v=4" width="200" height="200" style="border-radius:50%">
-      <h1>Agastya Hukoo</h1>
-      <h3>Competitive Programmer | Java & C# Enthusiast | Front-End Developer</h3>
-    </div>
-
-    <p align="center">
-      <!-- Social Icons -->
-      <a href="https://youtube.com/@Agastya-Hukoo">
-        <img src="https://img.shields.io/badge/YouTube-FF0000?style=for-the-badge&logo=youtube&logoColor=white" />
-      </a>
-      <a href="https://twitter.com/agastyahukoo">
-        <img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white" />
-      </a>
-      <a href="https://instagram.com/agastyahukoo">
-        <img src="https://img.shields.io/badge/Instagram-E4405F?style=for-the-badge&logo=instagram&logoColor=white" />
-      </a>
-      <a href="https://leetcode.com/agastyahukoo">
-        <img src="https://img.shields.io/badge/LeetCode-FFA116?style=for-the-badge&logo=leetcode&logoColor=black" />
-      </a>
-      <a href="https://www.codechef.com/users/agastya_hukoo">
-        <img src="https://img.shields.io/badge/CodeChef-5B4638?style=for-the-badge&logo=codechef&logoColor=white" />
-      </a>
-    </p>
-
-    <!-- About Me -->
-    <div align="justify">
-      <h2>About Me</h2>
-      Hello, I'm Agastya, a high school student with a profound passion for programming and an ambition to excel in competitive programming...
-    </div>
-
-    <!-- Skills Showcase -->
-    <div align="center">
-      <h2>Skills Showcase</h2>
-      <img src="https://img.shields.io/badge/-Java-007396?style=flat&logo=java&logoColor=white" />
-      <!-- More Skills -->
-    </div>
-
-    <!-- Featured Projects -->
-    <div align="center">
-      <h2>Featured Projects</h2>
-      <details>
-        <summary><b>Carbon - The Frontend Innovator 🚀</b></summary>
-        <p>Carbon redefines the frontend development experience...</p>
-      </details>
-      <!-- More Projects -->
-    </div>
-
-    <!-- Professional Experience -->
-    <h2>Professional Experience</h2>
-    <ul>
-      <li>Front End Web Developer (3 months) - Transformed web interfaces...</li>
-    </ul>
-
-    <!-- Educational Journey -->
-    <div align="center">
-      <h2>Educational Journey</h2>
-      📖 Currently exploring computer science topics in high school...
-    </div>
-
-    <div align="center">
-      <h4>"Coding with Passion, Innovating for Tomorrow"</h4>
-    </div>
-    <!-- README Content Ends Here -->
+<div class="centered-box">
+  <!-- README Content (Adjusted for Dark Theme) -->
+  <div align="center">
+    <img src="https://avatars.githubusercontent.com/u/136306593?v=4" width="200" height="200" style="border-radius:50%">
+    <h1>Agastya Hukoo</h1>
+    <h3>Competitive Programmer | Java & C# Enthusiast | Front-End Developer</h3>
   </div>
+
+  <p align="center" class="badges">
+    <!-- Social Icons -->
+    <a href="https://youtube.com/@Agastya-Hukoo">
+      <img src="https://img.shields.io/badge/YouTube-FF0000?style=for-the-badge&logo=youtube&logoColor=white" />
+    </a>
+    <a href="https://twitter.com/agastyahukoo">
+      <img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white" />
+    </a>
+    <a href="https://instagram.com/agastyahukoo">
+      <img src="https://img.shields.io/badge/Instagram-E4405F?style=for-the-badge&logo=instagram&logoColor=white" />
+    </a>
+    <a href="https://leetcode.com/agastyahukoo">
+      <img src="https://img.shields.io/badge/LeetCode-FFA116?style=for-the-badge&logo=leetcode&logoColor=black" />
+    </a>
+    <a href="https://www.codechef.com/users/agastya_hukoo">
+      <img src="https://img.shields.io/badge/CodeChef-5B4638?style=for-the-badge&logo=codechef&logoColor=white" />
+    </a>
+  </p>
+
+  <!-- Adjusted content for Dark Theme -->
+  <div align="justify">
+    <h2>About Me</h2>
+    Hello, I'm Agastya, a high school student with a profound passion for programming...
+  </div>
+
+  <!-- Skills Showcase -->
+  <div align="center">
+    <h2>Skills Showcase</h2>
+    <!-- Skills Badges -->
+  </div>
+
+  <!-- More Content -->
 </div>
 
 </body>
