--- a/temp_2.html
+++ b/temp_2.html
@@ -10,6 +10,7 @@
     height: 100%;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    background-image: url('new_background.png');
     background-color: #121212; /* Dark theme background */
     color: #e0e0e0; /* Light text for readability */
     display: flex;
