--- a/temp_2.html
+++ b/temp_2.html
@@ -14,6 +14,7 @@
     color: #e0e0e0; /* Light text for readability */
     overflow: hidden;
     background: #121212; /* Ensures no glow effect */
+    background-image: url('new_background.png');
   }
 
   .bg {
