--- a/temp_2.html
+++ b/temp_2.html
@@ -14,7 +14,9 @@
     color: #e0e0e0; /* Light text for readability */
     overflow: hidden;
     background: #121212; /* Ensures no glow effect */
-    background-image: url('new_background.png');
+    background-image: url('new_background.png');    
+    filter: blur(8px);
+    z-index: -1;
   }
 
   .bg {
@@ -40,7 +42,7 @@
   }
 
   .centered-box {
-    background-color: rgba(0, 0, 0, 0.7); /* Dark translucent background */
+    background-color: rgba(0, 0, 0, 0.9); /* Dark translucent background */
     backdrop-filter: blur(5px);
     padding: 20px;
     border-radius: 10px;
