--- a/stock/index.html
+++ b/stock/index.html
@@ -9,6 +9,18 @@
 <body>
     <div class="container">
         <h1>Stock Price Graphs</h1>
+        <div class="controls">
+            <label for="symbol">Symbol:</label>
+            <input type="text" id="symbol" value="AAPL">
+            <label for="range">Time Range:</label>
+            <select id="range">
+                <option value="1mo">1 Month</option>
+                <option value="3mo">3 Months</option>
+                <option value="6mo">6 Months</option>
+                <option value="1y">1 Year</option>
+            </select>
+            <button id="update">Update</button>
+        </div>
         <div id="chart"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
