--- a/stock/index.html
+++ b/stock/index.html
@@ -25,9 +25,14 @@
                         <option value="1y">1 Year</option>
                     </select>
                     <button id="update">Update</button>
+                    <div class="stock-search">
+                        <input type="text" id="stock-search" placeholder="Search stocks...">
+                        <button id="add-stock">Add</button>
+                    </div>
                 </div>
-                <div class="info-box">
-                    <p>Welcome to the Stock Price Graphs website. Here you can view the historical stock prices of various companies. Use the controls to select a different company or time range.</p>
+                <div class="stock-menu">
+                    <h3>Selected Stocks</h3>
+                    <ul id="selected-stocks"></ul>
                 </div>
             </div>
         </div>
