--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,26 +6,14 @@
     <meta name="description" content="Portfolio of a Freelance Graphic Designer and Digital Artist. Showcasing creative designs and digital art.">
     <title>Graphic Designer & Digital Artist Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <h1 class="title">Jane Doe</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="about" class="about">
-        <h2>About Me</h2>
-        <p>I am a freelance graphic designer and digital artist with a passion for creating visually stunning designs and artwork. With years of experience in the industry, I specialize in bringing creative ideas to life.</p>
+    <section id="title" class="full-screen">
+        <h1 class="vertical-title">デザイナー</h1>
     </section>
 
-    <section id="portfolio" class="portfolio">
-        <h2>My Portfolio</h2>
+    <section id="portfolio" class="full-screen">
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="path/to/artwork1.jpg" alt="Artwork 1">
@@ -35,21 +23,6 @@
             <!-- Add more portfolio items here -->
         </div>
     </section>
-
-    <section id="contact" class="contact">
-        <h2>Contact Me</h2>
-        <p>Interested in working together? Let's get in touch!</p>
-        <form>
-            <input type="text" placeholder="Name" required>
-            <input type="email" placeholder="Email" required>
-            <textarea placeholder="Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
-
-    <footer class="footer">
-        <p>&copy; 2024 Jane Doe. All rights reserved.</p>
-    </footer>
 
     <script src="script.js"></script>
 </body>
