--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Portfolio of a Freelance Graphic Designer and Digital Artist. Showcasing creative designs and digital art.">
     <title>Graphic Designer & Digital Artist Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section id="title" class="full-screen">
+    <section id="title" class="full-screen title-section">
         <h1 class="vertical-title">デザイナー</h1>
     </section>
 
-    <section id="portfolio" class="full-screen">
+    <section id="portfolio" class="full-screen portfolio-section">
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="path/to/artwork1.jpg" alt="Artwork 1">
