--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -93,9 +93,24 @@
     <section id="portfolio" class="full-screen portfolio-section">
         <div class="portfolio-grid">
             <div class="portfolio-item" onclick="openPopup(0)">
-                <img src="path/to/artwork1.jpg" alt="Artwork 1">
-                <h3>Project Title 1</h3>
-                <p>Description of Project 1</p>
+                <img src="path/to/artwork1.jpg" alt="Album 1">
+                <h3>Album 1</h3>
+            </div>
+            <div class="portfolio-item" onclick="openPopup(1)">
+                <img src="path/to/artwork2.jpg" alt="Album 2">
+                <h3>Album 2</h3>
+            </div>
+            <div class="portfolio-item" onclick="openPopup(2)">
+                <img src="path/to/artwork3.jpg" alt="Album 3">
+                <h3>Album 3</h3>
+            </div>
+            <div class="portfolio-item" onclick="openPopup(3)">
+                <img src="path/to/artwork4.jpg" alt="Album 4">
+                <h3>Album 4</h3>
+            </div>
+            <div class="portfolio-item" onclick="openPopup(4)">
+                <img src="path/to/artwork5.jpg" alt="Album 5">
+                <h3>Album 5</h3>
             </div>
         </div>
     </section>
@@ -108,8 +123,51 @@
             {
                 title: "Album 1",
                 images: [
-                    { src: "path/to/image1.jpg", description: "Image 1 Description" },
-                    { src: "path/to/image2.jpg", description: "Image 2 Description" }
+                    { src: "path/to/album1/image1.jpg", description: "Image 1 Description" },
+                    { src: "path/to/album1/image2.jpg", description: "Image 2 Description" },
+                    { src: "path/to/album1/image3.jpg", description: "Image 3 Description" },
+                    { src: "path/to/album1/image4.jpg", description: "Image 4 Description" },
+                    { src: "path/to/album1/image5.jpg", description: "Image 5 Description" }
+                ]
+            },
+            {
+                title: "Album 2",
+                images: [
+                    { src: "path/to/album2/image1.jpg", description: "Image 1 Description" },
+                    { src: "path/to/album2/image2.jpg", description: "Image 2 Description" },
+                    { src: "path/to/album2/image3.jpg", description: "Image 3 Description" },
+                    { src: "path/to/album2/image4.jpg", description: "Image 4 Description" },
+                    { src: "path/to/album2/image5.jpg", description: "Image 5 Description" }
+                ]
+            },
+            {
+                title: "Album 3",
+                images: [
+                    { src: "path/to/album3/image1.jpg", description: "Image 1 Description" },
+                    { src: "path/to/album3/image2.jpg", description: "Image 2 Description" },
+                    { src: "path/to/album3/image3.jpg", description: "Image 3 Description" },
+                    { src: "path/to/album3/image4.jpg", description: "Image 4 Description" },
+                    { src: "path/to/album3/image5.jpg", description: "Image 5 Description" }
+                ]
+            },
+            {
+                title: "Album 4",
+                images: [
+                    { src: "path/to/album4/image1.jpg", description: "Image 1 Description" },
+                    { src: "path/to/album4/image2.jpg", description: "Image 2 Description" },
+                    { src: "path/to/album4/image3.jpg", description: "Image 3 Description" },
+                    { src: "path/to/album4/image4.jpg", description: "Image 4 Description" },
+                    { src: "path/to/album4/image5.jpg", description: "Image 5 Description" }
+                ]
+            },
+            {
+                title: "Album 5",
+                images: [
+                    { src: "path/to/album5/image1.jpg", description: "Image 1 Description" },
+                    { src: "path/to/album5/image2.jpg", description: "Image 2 Description" },
+                    { src: "path/to/album5/image3.jpg", description: "Image 3 Description" },
+                    { src: "path/to/album5/image4.jpg", description: "Image 4 Description" },
+                    { src: "path/to/album5/image5.jpg", description: "Image 5 Description" }
                 ]
             }
         ];
