--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -109,8 +109,8 @@
                 <h3>Album 4</h3>
             </div>
             <div class="portfolio-item" onclick="openPopup(4)">
-                <img src="path/to/artwork5.jpg" alt="Album 5">
-                <h3>Album 5</h3>
+                <img src="Oasis.webp" alt="As Leaves Fall, So Do Our Memories Unfold">
+                <h3>As Leaves Fall, So Do Our Memories Unfold</h3>
             </div>
         </div>
     </section>
@@ -123,7 +123,7 @@
             {
                 title: "Album 1",
                 images: [
-                    { src: "path/to/album1/image1.jpg", description: "Image 1 Description" },
+                    { src: "Oasis.webp", description: "Image 1 Description" },
                     { src: "path/to/album1/image2.jpg", description: "Image 2 Description" },
                     { src: "path/to/album1/image3.jpg", description: "Image 3 Description" },
                     { src: "path/to/album1/image4.jpg", description: "Image 4 Description" },
