--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
             align-items: center;
         }
         .title-section {
-            background: url('path/to/background-image.jpg') no-repeat center center;
+            background: url('background.webp') no-repeat center center;
             background-size: cover;
         }
         .vertical-title {
